Fixing the test failure for latest Java versions